@@ -1,8 +1,6 @@
 
 // -----------------------------------------
 // startapp.js
-// last modified : 04-08-2010
-// Lunch the Movie interface
 //------------------------------------------ 
 
 Ext.onReady(function() {
@@ -77,7 +75,7 @@ Ext.onReady(function() {
 	var storesToLoad = [
 	   //{store : 'storevideoflags', url: '/xbmcCmds/xbmcHttp?command=queryvideodatabase(select idFile, strVideoCodec, fVideoAspect, iVideoWidth, iVideoHeight from streamdetails where iStreamType=0)'},
 	   //{store : 'storeaudioflags', url: '/xbmcCmds/xbmcHttp?command=queryvideodatabase(select idFile, strAudioCodec, iAudioChannels from streamdetails where iStreamType=1)'},
-	   //{store : 'moviesetstore', url: '/xbmcCmds/xbmcHttp?command=queryvideodatabase(select idSet, strSet FROM sets)'},
+	   {store : 'moviesetstore', url: '/xbmcCmds/xbmcHttp?command=queryvideodatabase(select idSet, strSet FROM sets)'},
 	   {store : 'storegenre', url: '/xbmcCmds/xbmcHttp?command=queryvideodatabase(select idGenre, strGenre FROM genre)'}
 	];
 
@@ -99,11 +97,14 @@ Ext.onReady(function() {
 	//Moviegrid.on('contextmenu', gridContextHandler);
 	
 	function startMyApp() {
+	
+		
+	
 		var App = new Movie.Mainpanel({
 			renderTo: Ext.getBody()	 
 		});
 		Ext.QuickTips.init();
-		storeMovie.load();
+		storeMovie.loadXbmc();
 		
 		// begin search config
 		var searchStore = new Ext.data.SimpleStore({
